--- a/client/src/components/videoCard/VideoCard.module.css
+++ b/client/src/components/videoCard/VideoCard.module.css
@@ -20,7 +20,7 @@
 }
 
 .container:hover .info {
-  transform: scaleY(0.9) translateY(1em);
+  transform: scaleY(0.9) translateY(0.5em);
   transition: transform 0.4s;
 }
 
@@ -53,34 +53,47 @@
 }
 
 .info {
-  padding-top: 0.2em;
-  padding-left: 0.1em;
+  padding: 0.1em;
   position: absolute;
   z-index: 3;
   width: 100%;
-  height: 6em;
-  margin-top: 6em;
+  height: 4em;
+  margin-top: 8em;
   background: linear-gradient(
     0deg,
-    rgba(41, 41, 41, 0.6) 0%,
-    rgba(35, 35, 35, 0.6) 100%
+    rgba(var(--menu-color), 1) 92%,
+    rgba(255, 255, 255, 0) 100%
   );
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  backdrop-filter: blur(10px);
   display: flex;
   flex-direction: column;
 }
 
-.top {
+.title > p {
+  max-width: 95%;
+  min-height: 2.5em;
+  font-size: 0.9em;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+}
+
+.bottom {
+  padding-top: 0.3em;
+  position: sticky;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 2.6em);
 }
 
 .year {
+  margin-left: 0.2em;
   grid-column: 1/1;
-  font-size: 0.65em;
+  font-size: 0.7em;
 }
 
 .languages {
@@ -106,18 +119,10 @@
 
 .runtime {
   grid-column: 3/4;
-  font-size: 0.65em;
+  font-size: 0.7em;
 }
 
 .year p,
 .runtime p {
   color: rgb(var(--secondary-text));
-}
-
-.title {
-  margin-top: 0.2em;
-  margin-left: 0.3em;
-  width: 8em;
-  word-wrap: break-word;
-  font-size: 0.8em;
 }
