--- a/client/src/components/cardSlider/CardSlider.module.css
+++ b/client/src/components/cardSlider/CardSlider.module.css
@@ -5,12 +5,13 @@
   position: relative;
   width: 10em;
   margin-right: 7em;
+  align-items: center;
 }
 
 .card {
   min-width: 8em;
   aspect-ratio: 2/3;
-  margin: 0.5em;
+  margin: 0.8em;
   display: flex;
   position: relative;
   overflow: hidden;
@@ -24,7 +25,6 @@
   min-width: 1.4em;
   padding-left: 0.3em;
   padding-right: 0.3em;
-  margin-top: 50%;
   border-radius: 5px;
   position: relative;
   z-index: 4;
@@ -52,12 +52,12 @@
 
 .poster {
   display: flex;
-  position: relativee;
+  position: absolute;
 }
 
 .poster > img {
   width: 100%;
-  object-fit: fill;
+  border-radius: 5px;
 }
 
 .info {
@@ -65,7 +65,7 @@
   z-index: 3;
   width: 100%;
   height: 4em;
-  margin-top: 11em;
+  margin-top: 8em;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   background: linear-gradient(
