--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -5,7 +5,7 @@
 .input {
   border-style: none;
   height: 2em;
-  width: 20em;
+  width: 22vw;
   background-color: rgb(var(--top-color));
   border: 1px solid rgb(var(--menu-color));
   border-radius: var(--chip-radius);
