--- a/client/src/components/videoCard/VideoCard.module.css
+++ b/client/src/components/videoCard/VideoCard.module.css
@@ -1,5 +1,6 @@
 .container {
-  min-width: 8em;
+  width: 13vw;
+  max-width: 15em;
   aspect-ratio: 2/3;
   display: flex;
   position: relative;
@@ -57,8 +58,8 @@
   position: absolute;
   z-index: 3;
   width: 100%;
-  height: 4em;
-  margin-top: 8em;
+  height: 6vw;
+  margin-top: 14vw;
   background: linear-gradient(
     0deg,
     rgba(var(--menu-color), 1) 92%,
@@ -73,7 +74,7 @@
 .title > p {
   max-width: 95%;
   min-height: 2.5em;
-  font-size: 0.9em;
+  font-size: 1.1vw;
   display: -webkit-box !important;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -87,13 +88,13 @@
   position: sticky;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 2.6em);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .year {
   margin-left: 0.2em;
   grid-column: 1/1;
-  font-size: 0.7em;
+  font-size: 0.9vw;
 }
 
 .languages {
@@ -119,7 +120,7 @@
 
 .runtime {
   grid-column: 3/4;
-  font-size: 0.7em;
+  font-size: 0.9vw;
 }
 
 .year p,
