--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -2,15 +2,16 @@
   display: flex;
 }
 
-.input {
+.searchInput {
   border-style: none;
   height: 2em;
   width: 22vw;
   background-color: rgb(var(--top-color));
   border: 1px solid rgb(var(--menu-color));
   border-radius: var(--chip-radius);
+  padding-left: 0.5em;
 }
 
-.input:focus {
+.searchInput:focus {
   border: 1px solid rgb(var(--secondary-text));
 }
