--- a/client/src/components/preview/Preview.module.css
+++ b/client/src/components/preview/Preview.module.css
@@ -1,10 +1,10 @@
 .container {
   width: 100%;
   height: 40vh;
-   display: flex;
+  display: flex;
   position: relative;
   justify-content: flex-end;
-  background-color: rgb(var(--top-color));
+  background-color: rgba(var(--top-color), 0.65);
   z-index: 1;
   overflow: hidden;
 }
@@ -14,8 +14,13 @@
   width: 100%;
   background: linear-gradient(
       90deg,
-      rgba(var(--top-color), 1) 50%,
-      rgba(var(--top-color), 0) 65%
+      rgba(var(--top-color), 0.5) 62%,
+      rgba(var(--top-color), 0) 63%
+    ),
+    linear-gradient(
+      0deg,
+      rgba(var(--top-color), 0.5) 15%,
+      rgba(var(--top-color), 0) 19%
     );
 
   position: absolute;
@@ -32,13 +37,13 @@
 
 .title {
   grid-row: 1;
-  font-size: 2vw;
+  font-size: 1.7em;
 }
 
 .numbers {
   grid-row: 2;
-  width: 65%;
-  font-size: 0.9em;
+  width: 15em;
+  font-size: 1.2em;
   display: flex;
 }
 
@@ -52,12 +57,10 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 0.9vw;
 }
 
 .row {
   grid-row: 4;
-  font-size: 0.85em;
   display: flex;
 }
 
@@ -65,22 +68,24 @@
   color: rgb(var(--secondary-text));
 }
 
-.col1, .col2 {
+.col1,
+.col2 {
   display: grid;
   grid-template-rows: repeat(3, 1em);
   row-gap: 0.3em;
-  font-size: 0.9vw;
+  font-size: 0.9em;
 }
-.col2{
+.col2 {
   margin-left: 1em;
 }
-
 
 .rating > p,
 .runtime > p,
 .year > p,
 .awards > p {
-  font-size: 0.9vw;
+  font-size: 0.55em;
+  width: 4em;
+  margin-top: 0.5em;
   color: rgb(var(--secondary-text));
 }
 
@@ -94,7 +99,7 @@
 .runtime,
 .year,
 .awards {
-  margin-left: 2em;
+  margin-left: 1.5em;
 }
 
 .calendar,
@@ -142,38 +147,67 @@
   background-image: url("../../assets/icons/oscar.png");
 }
 
+.line {
+  display: flex;
+}
+
 .btns {
   grid-row: 5;
   display: flex;
   justify-content: flex-start;
   margin-top: 0.6em;
 }
+.progressCol {
+  display: flex;
+  flex-direction: column;
+  width: 6.5em;
+  margin-left: 2em;
+}
 
-.play1Btn,
-.play2Btn {
+.progressOnBtn {
+  border-style: none;
+  height: 1px;
+  width: 98%;
+  color: rgb(var(--primary-text));
+}
+
+.play1Btn {
   font-size: 0.8em;
   border-style: none;
-  border-radius: var(--chip-radius);
   background-color: rgb(var(--menu-color));
-  width: 7em;
+  width: 8em;
   height: var(--button-height);
   cursor: pointer;
 }
 
-.play1Btn {
-  margin-right: 5em;
+.play2Btn {
+  font-size: 0.8em;
+  border-style: none;
+  background-color: rgb(var(--menu-color));
+  width: 8em;
+  height: calc(var(--button-height) - 1px);
+  cursor: pointer;
 }
 
-.audios{
+.play1Btn:hover,
+.play2Btn:hover {
+  background-color: rgb(var(--hover-color));
+}
+
+.audios {
   margin-top: 0.5em;
+  margin-left: 2em;
   display: flex;
   width: 4em;
   justify-content: space-between;
 }
 
-.german, .english{
-  height: 1.5em;
+.german,
+.english {
+  margin-left: 0.5em;
   width: 1.5em;
+  aspect-ratio: 1/1;
+  background-repeat: no-repeat;
   background-size: 1.5em;
   cursor: pointer;
 }
@@ -188,14 +222,14 @@
 
 .videoWall {
   position: absolute;
-  width: 45%;
+  width: 38%;
   overflow: hidden;
   z-index: -1;
 }
 
 .trailer {
   width: 100%;
-  aspect-ratio: 16/9;
+  aspect-ratio: 19/9;
   position: relative;
   object-fit: fill;
 }
@@ -230,4 +264,41 @@
 
 .muteBtn {
   background-image: url("../../assets/icons/icon_volume_100.png");
+}
+
+@media only screen and (min-width: 1440px) {
+  .title {
+    font-size: 2.5em;
+  }
+
+  .numbers {
+    font-size: 1.6em;
+  }
+
+  .plot {
+    font-size: 1.2em;
+  }
+
+  .col1,
+  .col2 {
+    font-size: 1.4em;
+  }
+
+  .play1Btn,
+  .play2Btn {
+    margin-top: 1em;
+    font-size: 1.2em;
+  }
+
+  .audios {
+    margin-left: 5em;
+    width: 8em;
+  }
+
+  .german,
+  .english {
+    margin-top: 1em;
+    width: 3em;
+    background-size: 3em;
+  }
 }
