--- a/client/src/components/previewHero/PreviewHero.module.css
+++ b/client/src/components/previewHero/PreviewHero.module.css
@@ -29,8 +29,7 @@
 }
 
 .frame {
-  min-width: var(--preview-card-width);
-  max-width: var(--preview-card-width);
+  width: 8em;
   aspect-ratio: 2/3;
   margin: 0.5em;
   opacity: 0.7;
@@ -58,5 +57,11 @@
   }
   100% {
     transform: translate(-100%, 0);
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .frame {
+    width: 12em;
   }
 }
