--- a/client/src/components/sideEditor/Form.module.css
+++ b/client/src/components/sideEditor/Form.module.css
@@ -1,78 +1,119 @@
 .container {
   background-color: rgb(var(--menu-color));
   height: 100%;
-  min-width: 22em;
+  width: 22em;
   display: flex;
   flex-direction: column;
-  padding-bottom: 5em;
+  padding-bottom: 4.5em;
 }
 
 .form {
   width: 95%;
-  padding-bottom: 5em;
-  padding-left: 1em;
+  padding-bottom: 4.5em;
+  padding-left: 0.5em;
   overflow-x: hidden;
 }
 
 .row {
-  padding-top: 0.3em;
+  padding-top: 0.1em;
   width: 100%;
   display: flex;
   padding-right: 1em;
 }
 
-input {
+.textOnInput {
+  margin-top: 1em;
+  position: relative;
+}
+.textOnInput label {
+  position: absolute;
+  top: -15px;
+  left: 5px;
+  padding: 2px;
+  z-index: 1;
+  color: rgb(var(--secondary-text));
+  font-size: 0.8em;
+}
+
+.textOnInput .tag {
+  color: rgb(var(--secondary-text));
+  font-size: 0.7em;
+}
+
+.textOnInput label:after {
+  content: " ";
+  background-color: rgb(var(--menu-color));
+  width: 100%;
+  height: 13px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 0.5em;
+}
+
+.inputField {
   border-style: none;
-  background-color: rgb(var(--top-color));
-  height: 1.4em;
+  border-radius: 5px;
+  border: 1px solid rgb(var(--secondary-text));
+  background-color: rgb(var(--menu-color));
+  box-shadow: none !important;
+  height: 1.7em;
+  padding-left: 0.5em;
 }
 
 .topLeft {
   display: flex;
   flex-direction: column;
-  width: 17em;
+  width: 16em;
   margin-right: 0.2em;
-}
-
-label {
-  color: rgb(var(--secondary-text));
-  font-size: 0.85em;
-}
-
-label > .tag {
-  font-size: 0.7em;
-  color: rgb(var(--secondary-text));
 }
 
 .topRight {
   display: flex;
   flex-direction: column;
-  width: 4em;
-  margin-left: 1em;
+  width: 6em;
+  padding-left: 0.2em;
 }
 
 .mid {
   display: flex;
   flex-direction: column;
-  width: 19em;
-  margin-top: -0.3em;
+  width: 100%;
+  margin-top: -0.1em;
 }
 
-.mid > .inputPlot {
-  height: 4em;
+.topLeft > .textOnInput > .inputField,
+.topRight > .textOnInput > .inputField {
   width: 100%;
-  background-color: rgb(var(--top-color));
+}
+
+.mid > .textOnInput > .inputField,
+.mid > .textOnInput > .inputArea {
+  width: 100%;
+}
+
+.inputArea {
   border-style: none;
+  border-radius: 5px;
+  border: 1px solid rgb(var(--secondary-text));
+  background-color: rgb(var(--menu-color));
+  box-shadow: none !important;
+  height: 3.5em;
+  padding-left: 0.5em;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
   resize: none;
   overflow-y: scroll;
 }
 
-.poster {
-  height: calc(var(--preview-card-height) * 1.1);
-  width: calc(var(--preview-card-width) * 1.1);
-}
 .poster > img {
-  width: 7em;
+  margin-top: 0.3em;
+  width: 6.3em;
   aspect-ratio: 2/3;
   object-fit: fill;
 }
@@ -80,27 +121,74 @@ label > .tag {
 .bottomRight {
   display: flex;
   flex-direction: column;
-  width: 17em;
   margin-left: 0.5em;
 }
 
 .bottomRight > .line {
   display: flex;
+  margin-top: -0.3em;
 }
 
-.bottomRight > .line > input {
-  width: 85%;
+.bottomRight > .line > .textOnInput >input {
+  width: 95%;
 }
 
 .bottomRight > .line > .sourceBtn {
   border-style: none;
-  background-color: rgb(var(--top-color));
+  background-color: rgb(var(--menu-color));
   background-image: url("../../assets/icons/icon_input_file.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1.2em;
-  width: 2.5em;
-  height: 1.3em;
-  margin-left: 0.5em;
+  width: 1.75em;
+  aspect-ratio: 1/1;
+  margin-top: 0.9em;
+  margin-left: 0.2em;
   cursor: pointer;
+}
+
+@media only screen and (min-width: 1440px) {
+  .container {
+    width: 30em;
+  }
+
+  .textOnInput label {
+    font-size: 1em;
+  }
+
+  .inputField {
+    height: 1.7em;
+    font-size: 1.2em;
+  }
+
+  .topLeft {
+    width: 24em;
+  }
+
+  .topRight {
+    width: 8em;
+  }
+
+  .bottomRight > .line > .textOnInput >input {
+    width: 11.5em;
+  }
+
+  .bottomRight > .line > .textOnInput {
+   margin-top: 2em;
+  }
+
+  .bottomRight > .line > .sourceBtn {
+    width: 1.7em;
+    background-size: 1.7em;
+    margin-top: 2.2em;
+    margin-left: 1em;
+  }
+
+  .inputArea {
+    height: 8em;
+    font-size: 1.2em;
+  }
+  .poster > img {
+    width: 10em;
+  }
 }
