--- a/client/src/components/toggleBar/ToggleBar.module.css
+++ b/client/src/components/toggleBar/ToggleBar.module.css
@@ -1,5 +1,3 @@
-
-
 .container {
   position: absolute;
   right: 1em;
@@ -29,7 +27,7 @@
 .movieButton {
   border: none;
   border-radius: var(--button-radius);
-  height: --button-height;
+  height: 25px;
   width: 65px;
   background-color: transparent;
   cursor: pointer;
@@ -45,4 +43,15 @@
 
 .movieButton:focus .marker {
   margin-left: 80px;
+}
+
+@media only screen and (min-width: 1440px) {
+  .bar {
+    height: 30px;
+  }
+  .seriesButton,
+.movieButton, .marker{
+  height: 30px;
+  font-size: 14px;
+}
 }
