--- a/client/src/components/videoCard/VideoCard.module.css
+++ b/client/src/components/videoCard/VideoCard.module.css
@@ -1,6 +1,5 @@
 .container {
-  width: 13vw;
-  max-width: 15em;
+  width: 8em;
   aspect-ratio: 2/3;
   display: flex;
   position: relative;
@@ -58,8 +57,8 @@
   position: absolute;
   z-index: 3;
   width: 100%;
-  height: 6vw;
-  margin-top: 14vw;
+  height: 4em;
+  bottom: 0;
   background: linear-gradient(
     0deg,
     rgba(var(--menu-color), 1) 92%,
@@ -73,8 +72,8 @@
 
 .title > p {
   max-width: 95%;
-  min-height: 2.5em;
-  font-size: 1.1vw;
+  min-height: 1.7em;
+  font-size: 0.8em;
   display: -webkit-box !important;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -84,17 +83,17 @@
 }
 
 .bottom {
-  padding-top: 0.3em;
-  position: sticky;
+  padding: 0.3em;
+  position: absolute;
+  bottom: 0.15em;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 
 .year {
-  margin-left: 0.2em;
   grid-column: 1/1;
-  font-size: 0.9vw;
+  font-size: 0.6em;
 }
 
 .languages {
@@ -104,26 +103,50 @@
 }
 
 .german {
-  height: 15px;
   width: 15px;
+  aspect-ratio: 1/1;
   background-size: 15px;
+  background-repeat: no-repeat;
   background-image: url("../../assets/icons/german.png");
 }
 
 .english {
   margin-left: 5px;
-  height: 15px;
   width: 15px;
+  aspect-ratio: 1/1;
   background-size: 15px;
+  background-repeat: no-repeat;
   background-image: url("../../assets/icons/english.png");
 }
 
 .runtime {
   grid-column: 3/4;
-  font-size: 0.9vw;
+  font-size: 0.6em;
 }
 
 .year p,
 .runtime p {
   color: rgb(var(--secondary-text));
+}
+
+@media only screen and (min-width: 1440px) {
+  .container {
+    width: 12em;
+  }
+  .info {
+    height: 5em;
+  }
+  .title > p {
+    font-size: 1.1em;
+  }
+
+  .year,
+  .runtime {
+    font-size: 0.8em;
+  }
+  .german,
+  .english {
+    width: 20px;
+    background-size: 20px;
+  }
 }
