--- a/client/src/components/videoControl/VideoControl.module.css
+++ b/client/src/components/videoControl/VideoControl.module.css
@@ -27,7 +27,6 @@
   grid-row: 1/2;
   grid-column: 1/11;
   z-index: 3;
-  opacity: 0.4;
   display: grid;
   grid-template-columns: repeat(6, auto);
 }
@@ -35,6 +34,44 @@
   grid-column: 6 / 8;
   font-size: 30px;
   justify-self: center;
+}
+
+.audioSelect {
+  grid-column: 8 / 8;
+  display: flex;
+  flex-direction: column;
+  height: 8em;
+  width: 40px;
+}
+
+.dropContent {
+  display: flex;
+  position: relative;
+  width: 7em;
+  height: 3em;
+  padding-top: 0.4em;
+  background-color: rgba(black, 0.7);
+  justify-content: space-around;
+  border-radius: 5px;
+  visibility: hidden;
+}
+
+.german,
+.english {
+  height: 3em;
+  width: 40px;
+  background-size: 40px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  position: relative;
+}
+
+.german {
+  background-image: url("../../assets/icons/german.png");
+}
+
+.english {
+  background-image: url("../../assets/icons/english.png");
 }
 
 .controls {
@@ -46,17 +83,22 @@
 .volumeMute,
 .volumeUnder,
 .screenButton,
-.closeButton {
-  width: 40px;
-  height: 40px;
+.closeButton,
+.speechButton {
+  width: 30px;
+  height: 30px;
   border: none;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 40px;
+  background-size: 30px;
   transition: 0.2s;
   cursor: pointer;
   opacity: 0.4;
+}
+
+.speechButton {
+  background-image: url("../../assets/icons/icon_speech.png");
 }
 
 .volumeOver:hover,
@@ -175,13 +217,11 @@
   justify-self: center;
 }
 
-.progress .seekRange{
+.progress .seekRange {
   height: 3px;
-  width:100%;
-  background: rgb(var(--primary-text));
+  width: 100%;
+  background: white;
 }
-
-
 
 .bottom {
   grid-row: 10/11;
@@ -197,16 +237,16 @@
 }
 
 .nextButton {
-  margin-right: 20px;
-  margin-top: 25px;
+  bottom: 6em;
+  right: 15px;
   background: transparent;
   border: none;
   height: 20px;
-  width: 100px;
+  width: 110px;
   font-size: 17px;
-  z-index: 3;
+  z-index: 4;
+  position: absolute;
   cursor: pointer;
-  visibility: hidden;
 }
 
 .nextButton:hover {
