--- a/client/src/js/index.css
+++ b/client/src/js/index.css
@@ -6,7 +6,7 @@
   --secondary-text: 176, 176, 176;
   --primary-text: 255, 255, 255;
 
-  --hover-color: rgb(55, 55, 55);
+  --hover-color: 55, 55, 55;
 
   --bar-size: 2.2em;
   --chip-radius: 5px;
@@ -34,26 +34,25 @@ body {
   outline: none;
 }
 
-::-webkit-scrollbar-corner {
-  top: var(--bar-size);
+::-webkit-progress-bar {
+  background-color: rgb(var(--top-color));
+}
+::-webkit-progress-value {
+  background: rgb(var(--secondary-text));
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-corner {
-  /* margin-top: var(--bar-size); */
+}
+
+::-webkit-scrollbar-corner {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: rgb(var(--back-color));
-  border-radius: 10px;
-  /* margin-top: var(--bar-size); */
 }
 
 ::-webkit-scrollbar-thumb {
-  /* margin-top: var(--bar-size); */
-  border-radius: 10px;
-  box-shadow: inset 0 0 10px 10px rgb(var(--secondary-text));
 }
