--- a/client/src/screens/homeScreen/Home.module.css
+++ b/client/src/screens/homeScreen/Home.module.css
@@ -11,26 +11,8 @@
   display: flex;
 }
 
-
 #editor {
-  /*   background-color: var(--menu-color); */
   height: 100vh;
-}
-.tabBar {
-  /*   background-color: var(--back-color); */
-  display: flex;
-  justify-content: flex-end;
-}
-
-.tab {
-  /*   background-color: var(--back-color); */
-  border-style: none;
-  padding: 0.5em;
-  cursor: pointer;
-}
-
-.tab:active {
-  /*   background-color: var(--menu-color); */
 }
 
 .center {
@@ -42,11 +24,12 @@
   flex-direction: column;
 }
 
-
-
-
 .navBars {
-  background:  linear-gradient(0deg, rgba(var(--back-color), 1) 87%, rgba(var(--top-color), 1) 96%);
+  background: linear-gradient(
+    0deg,
+    rgba(var(--back-color), 1) 87%,
+    rgba(var(--top-color), 1) 96%
+  );
   height: var(--bar-size);
   padding-top: 1.5em;
   padding-bottom: 1.5em;
@@ -55,18 +38,13 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 2;
+  z-index: 4;
 }
-
-
-
-
-
 
 .header {
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 5;
 }
 
 .closeBtn {
@@ -86,16 +64,34 @@
   background-image: url("../../assets/icons/icon_close.png");
 }
 
-.preview{
-  background: /* linear-gradient(
-    90deg,
-    rgba(18, 18, 18, 1) 53%,
-    rgba(18, 18, 18, 0) 63%
-  ), */
-  linear-gradient(0deg, rgba(var(--back-color), 1) 3%, rgba(var(--top-color), 0) 6%);
-  min-height: var(--preview-height);
+.preview {
   position: relative;
+  z-index: 4;
+}
+
+.light {
+  filter: blur(40px);
+  width: 40vw;
+  position: absolute;
+  top: 2em;
+  right: 10px;
   z-index: 3;
+}
+
+.light_trailer {
+  width: 100%;
+  aspect-ratio: 17/9;
+  position: relative;
+  object-fit: fill;
+}
+
+.back {
+  height: 47vh;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  width: 100%;
+  background-color: rgba(var(--back-color));
 }
 
 .cluster {
@@ -107,14 +103,4 @@
   justify-content: center;
   position: relative;
   z-index: 1;
-}
-
-.light {
-  background-color: aqua;
-  right: 0;
-  top: 0;
-  width: 50rem;
-  height: 21rem;
-  position: absolute;
-  z-index: -1;
 }
