--- a/client/src/screens/homeScreen/Home.module.css
+++ b/client/src/screens/homeScreen/Home.module.css
@@ -70,10 +70,9 @@
 }
 
 .light {
-  filter: blur(40px);
   width: 40vw;
   position: absolute;
-  top: 2em;
+  top: var(--bar-size);
   right: 10px;
   z-index: 3;
 }
