--- a/client/src/components/cardSlider/CardSlider.module.css
+++ b/client/src/components/cardSlider/CardSlider.module.css
@@ -1,15 +1,16 @@
 .container {
   display: flex;
   flex-direction: row;
-  height: calc (var(--preview-height));
+  height: 8em;
   position: relative;
-  width: 10em;
-  margin-right: 7em;
+  width: 15em;
+  margin-top: 4em;
+  margin-right: 6em;
   align-items: center;
 }
 
 .card {
-  min-width: 8em;
+  width: 8em;
   aspect-ratio: 2/3;
   margin: 0.8em;
   display: flex;
@@ -64,8 +65,8 @@
   position: absolute;
   z-index: 3;
   width: 100%;
-  height: 4em;
-  margin-top: 8em;
+  height: 5em;
+  margin-top: 7em;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   background: linear-gradient(
@@ -87,10 +88,25 @@
 
 .episode {
   margin-top: 0.5em;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 .counter {
   margin-top: 0.5em;
-  font-size: 0.6em;
+  font-size: 0.8em;
   color: rgb(var(--secondary-text));
+}
+
+@media only screen and (min-width: 1440px) {
+  .container {
+    margin-top: 7em;
+    height: 12;
+    width: 19em;
+  }
+  .card {
+    width: 12em;
+  }
+  .info {
+    height: 9em;
+    margin-top: 11em;
+  }
 }
