--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -15,3 +15,11 @@
 .searchInput:focus {
   border: 1px solid rgb(var(--secondary-text));
 }
+
+@media only screen and (min-width: 1440px) {
+  .searchInput {
+    height: 1.7em;
+    font-size: 1.2em;
+    margin-bottom: 1em;
+  }
+}
