--- a/client/src/components/videoCard/VideoCard.module.css
+++ b/client/src/components/videoCard/VideoCard.module.css
@@ -4,14 +4,14 @@
   display: flex;
   position: relative;
   cursor: pointer;
-  margin: 0.8em;
+  margin: 1em;
   overflow: hidden;
   border-radius: 5px;
 }
 
 .container:hover {
   transform: scaleY(1.1);
-  transition: transform 0.6s;
+  transition: transform 0.4s;
 }
 
 .container:hover .poster {
@@ -20,18 +20,19 @@
 }
 
 .container:hover .info {
-  transform: scaleY(0.9) translateY(0.5em);
-  transition: transform 0.4s;
+transform: scaleY(0.9) translateY(0.5em); 
+  transition: transform 0.4s; 
 }
 
 .poster {
   display: flex;
   position: absolute;
   z-index: 2;
+  justify-content: center;
 }
 
 .poster > img {
-  width: 100%;
+  width: 99%;
   border-radius: 5px;
 }
 
