--- a/client/src/components/videoControl/VideoControl.module.css
+++ b/client/src/components/videoControl/VideoControl.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   overflow: hidden;
   background-color: black;
-  cursor: pointer;
 }
 .player {
   height: 100%;
@@ -11,27 +10,20 @@
   left: 0;
   display: grid;
   position: relative;
-  z-index: 2;
+  z-index: 4;
   grid-template-rows: repeat(10, auto);
   grid-template-columns: repeat(10, auto);
-  opacity: 0;
-  transition-delay: 0.5s;
-}
-
-.container:hover .player {
-  opacity: 1;
 }
 
 .top {
   margin-top: 10px;
   grid-row: 1/2;
   grid-column: 1/11;
-  z-index: 3;
   display: grid;
   grid-template-columns: repeat(6, auto);
 }
 .title {
-  grid-column: 6 / 8;
+  grid-column: 2 / 8;
   font-size: 30px;
   justify-self: center;
 }
@@ -75,6 +67,7 @@
 }
 
 .controls {
+  margin-top: 0.5em;
   grid-column: 9 / 10;
   display: flex;
   justify-content: flex-end;
@@ -172,7 +165,7 @@
   transition: 0.2s;
   cursor: pointer;
   margin: 25px;
-  opacity: 0.2;
+  opacity: 0.3;
 }
 
 .rewind:hover,
@@ -211,7 +204,7 @@
   grid-row: 10/10;
   grid-column: 1/11;
   z-index: 3;
-  opacity: 0.4;
+  opacity: 0.6;
   margin-bottom: 40px;
   width: 100%;
   justify-self: center;
@@ -220,7 +213,7 @@
 .progress .seekRange {
   height: 3px;
   width: 100%;
-  background: white;
+  cursor: pointer;
 }
 
 .bottom {
@@ -229,7 +222,7 @@
   display: flex;
   justify-content: space-between;
   z-index: 2;
-  opacity: 0.4;
+  opacity: 0.3;
 }
 .time {
   margin-left: 20px;
