--- a/client/src/components/preview/Preview.module.css
+++ b/client/src/components/preview/Preview.module.css
@@ -6,18 +6,13 @@
   justify-content: flex-end;
   z-index: 1;
   overflow: hidden;
-/*   background-color: rgba(var(--back-color), var( --ambi-opacity)); */
 }
 
 .overlay {
   height: 100%;
   width: 100%;
-/*   background: linear-gradient(
-    90deg,
-    rgba(var(--top-color), var(--ambi-opacity)) 45%,
-    rgba(var(--top-color), 0) 46%
-  ); */
   position: absolute;
+  left: 0;
   z-index: 2;
   display: flex;
 }
