--- a/client/src/components/videoControl/VideoControl.module.css
+++ b/client/src/components/videoControl/VideoControl.module.css
@@ -229,9 +229,22 @@
   margin-top: 25px;
 }
 
+.preview {
+  position: absolute;
+  width: 7em;
+  aspect-ratio: 2/1;
+  right: 2em;
+  bottom: 10em;
+}
+
+.preview > img {
+  width: 100%;
+  border: 2px solid white;
+}
+
 .nextButton {
-  bottom: 6em;
-  right: 15px;
+  bottom: 8em;
+  right: 2em;
   background: transparent;
   border: none;
   height: 20px;
