--- a/client/src/components/preview/Preview.module.css
+++ b/client/src/components/preview/Preview.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 40vh;
+  height: 42vh;
   display: flex;
   position: relative;
   justify-content: flex-end;
@@ -9,19 +9,12 @@
 }
 
 .overlay {
-  height: 100%;
+  height: fit-content;
   width: 100%;
   position: absolute;
   left: 0;
   z-index: 2;
   display: flex;
-}
-
-.description {
-  display: grid;
-  margin-left: 3.5em;
-  grid-template-rows: repeat(7, 1fr);
-  row-gap: 0.5em;
 }
 
 .title {
@@ -30,17 +23,30 @@
   font-size: 1.7em;
 }
 
+.description {
+  height: fit-content;
+  display: grid;
+  margin-left: 3.5em;
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 0.2em;
+  max-width: 30em;
+}
+
+
 .numbers {
   grid-row: 2;
-  width: 15em;
-  font-size: 1.2em;
+  height: fit-content;
+  width: fit-content;
   display: flex;
+  font-size: 0.7em;
 }
 
 .plot {
+  outline: 1px solid green;
   grid-row: 3;
-  max-width: 60%;
-  min-height: 3.7em;
+  min-height: 2.2em;
+  margin-top: -1em;
+  margin-bottom: 1em;
   font-size: 0.8em;
   display: -webkit-box !important;
   -webkit-line-clamp: 3;
@@ -52,6 +58,7 @@
 .row {
   grid-row: 4;
   display: flex;
+  margin-top: -0.2em;
 }
 
 .col1 > p {
@@ -73,7 +80,6 @@
 .runtime > p,
 .year > p,
 .awards > p {
-  font-size: 0.55em;
   width: 4em;
   margin-top: 0.5em;
   color: rgb(var(--secondary-text));
@@ -97,7 +103,7 @@
 .rotten,
 .tomatoes,
 .oscar {
-  height: 1.2em;
+  height: 1em;
   width: 1.2em;
   background-repeat: no-repeat;
   margin-right: 0.5em;
@@ -127,7 +133,7 @@
   display: flex;
   color: rgb(var(--secondary-text));
   align-items: center;
-  font-size: 0.9vw;
+  font-size: 0.9em;
 }
 
 .oscar {
@@ -138,6 +144,7 @@
 }
 
 .line {
+  height: fit-content;
   display: flex;
 }
 
@@ -145,7 +152,7 @@
   grid-row: 5;
   display: flex;
   justify-content: flex-start;
-  margin-top: 0.6em;
+  margin-top: 0.5em;
 }
 .progressCol {
   display: flex;
@@ -268,7 +275,7 @@
   }
 
   .numbers {
-    font-size: 1.6em;
+    font-size: 1.2em;
   }
 
   .plot {
