--- a/client/src/components/toggleBar/ToggleBar.module.css
+++ b/client/src/components/toggleBar/ToggleBar.module.css
@@ -1,58 +1,69 @@
 .container {
-  position: absolute;
-  right: 1em;
-}
-
-.bar {
-  background-color: rgb(var(--menu-color));
-  border-radius: var(--chip-radius);
-  width: fit-content;
-  height: 25px;
+  border: 2px solid rgb(var(--secondary-text));
+  border-radius: 5px;
+  overflow: hidden;
+  height: 1.7em;
   display: flex;
+  font-size: 0.9em;
+  right: 1em;
+  z-index: -1;
 }
 
-.marker {
-  height: 25px;
-  width: 65px;
-  border-radius: var(--chip-radius);
-  background-color: rgb(var(--secondary-text));
-  transition-property: margin;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in;
-  position: absolute;
-  z-index: 0;
-  align-self: center;
-}
-.seriesButton,
-.movieButton {
-  border: none;
-  border-radius: var(--button-radius);
-  height: 25px;
-  width: 65px;
-  background-color: transparent;
-  cursor: pointer;
+.btn {
+  width: 90px;
+  display: flex;
+  padding: 10px;
   position: relative;
-  z-index: 1;
-  align-self: center;
-  font-size: 12px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  transition: background-color 600ms ease, color 600ms ease;
 }
 
-.seriesButton {
-  margin-left: 10px;
+.toggleLeft,
+.toggleRight {
+  display: none;
 }
-
-.movieButton:focus .marker {
-  margin-left: 80px;
+.toggleLeft + label,
+.toggleRight + label {
+  cursor: pointer;
+  min-width: 60px;
+  height: 100%;
 }
-
-@media only screen and (min-width: 1440px) {
-  .bar {
-    height: 30px;
-    margin-bottom: 0.2em;
-  }
-  .seriesButton,
-.movieButton, .marker{
-  height: 30px;
-  font-size: 14px;
+.toggleLeft + label:hover,
+.toggleRight + label:hover {
+  color: rgb(var(--hover-color));
 }
+.toggleLeft + label:after,
+.toggleRight + label:after {
+  background-color: rgb(var(--secondary-text));
+  color: rgb(var(--back-color));
+  content: "";
+  height: 100%;
+  position: absolute;
+  transition: left 200ms /* cubic-bezier(0.77, 0, 0.175, 1) */;
+  width: 100%;
+  z-index: -1;
+}
+.toggleLeft + label {
+  border-right: 0;
+}
+.toggleLeft + label:after {
+  left: 100%;
+}
+.toggleRight + label {
+  margin-left: -5px;
+}
+.toggleRight + label:after {
+  left: -100%;
+}
+.toggleLeft:checked + label,
+.toggleRight:checked + label {
+  cursor: default;
+  color: rgb(var(--back-color));
+  transition: color 200ms;
+}
+.toggleLeft:checked + label:after,
+.toggleRight:checked + label:after {
+  left: 0;
 }
